# Cognitive-Understanding-OS

./: .gitignore  =1.0  AGENTS.md  README.md  config.example.yaml  opencode.json  pyproject.toml
cuos/: __init__.py  cli.py
cuos/cognition/: review_scheduler.py  scoring.py  state_machine.py
cuos/config/: settings.py
cuos/graph/: builder.py  utils.py
cuos/llm/: base.py  factory.py  mock_client.py  openai_compatible.py  prompt_registry.py
cuos/parsers/: base.py  docling_parser.py  errors.py  factory.py  markdown_utils.py  marker_parser.py  mineru_parser.py  mock_parser.py
cuos/pipeline/: audit.py  build_map.py  ingest.py  review.py  session.py
cuos/schemas/: audit.py  cognition.py  document.py  graph.py
cuos/storage/: sqlite_store.py  workspace.py
docs/: ARCHITECTURE.md  HANDOFF_FINAL_MVP.md  HANDOFF_PHASE_1.md  HANDOFF_PHASE_2.md  HANDOFF_PHASE_3.md  HANDOFF_PHASE_4.md  PROMPT_CUSTOMIZATION.md
examples/: sample_config.yaml  sample_paper.md
examples/sample_outputs/: README.md
prompts/: answer_audit.md  graph_builder.md  problem_model.md  review.md  socratic_question.md  transfer.md
scripts/: smoke_test.sh
tests/: test_audit_with_mock_llm.py  test_graph_validation.py  test_ingest_with_mock_parser.py  test_mock_llm_map.py  test_mock_pipeline.py  test_openai_client_json_extraction.py  test_parser_dependency_errors.py  test_parser_factory.py  test_prompt_registry.py  test_review_scheduler.py  test_schemas.py  test_session_state_machine.py  test_understanding_level_update.py  test_workspace.py
