[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuos"
version = "0.1.0"
description = "Cognitive Understanding OS CLI MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "networkx>=3.3",
  "questionary>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
docling = ["docling>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
cuos = "cuos.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cuos*"]
